[package]
name = "space_invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.1"
gl = "0.14.0"
glfw = "0.54.0"
winit = "0.29.10"
rand = "0.8.5"

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["ttf", "image"]